ValueAppearanceSettings Initial Implementation

--- a/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
+++ b/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Classes\Mesh3DObject.cs" />
     <Compile Include="Classes\Modification\ViewSettingsModification.cs" />
     <Compile Include="Classes\BoundingBox3DObject.cs" />
+    <Compile Include="Classes\Settings\ValueAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\TypeAppearanceSettings.cs" />
     <Compile Include="Classes\Triangle3DObject.cs" />
     <Compile Include="Classes\Rectangle3DObject.cs" />
