--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <Compile Include="Classes\RenameSpaceOptions.cs" />
     <Compile Include="Classes\Modification\AnalyticalModelModification.cs" />
+    <Compile Include="Classes\Settings\OpeningPropertiesAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\ApertureConstructionAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\ConstructionAppearanceSettings.cs" />
     <Compile Include="Classes\Settings\ApertureAppearanceSettings.cs" />
