Hide and RemoveOverrides Methods Implemented

--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -133,6 +133,8 @@
     </Compile>
     <Compile Include="Interfaces\ISection3DObject.cs" />
     <Compile Include="Modify\AssignAdjacencyCluster.cs" />
+    <Compile Include="Modify\Hide.cs" />
+    <Compile Include="Modify\RemoveOverrides.cs" />
     <Compile Include="Modify\RenameSpace.cs" />
     <Compile Include="Modify\RenameSpaces.cs" />
     <Compile Include="Modify\DuplicateInternalCondition.cs" />
