--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Interface\IUserVisibilitySetting.cs" />
     <Compile Include="Interface\IVisibilitySetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Value.cs" />
     <Compile Include="Query\DefaultMollierControlSettings.cs" />
     <Compile Include="Query\ParameterValue.cs" />
     <Compile Include="Query\ProcessParameterTypes.cs" />
