MollierControlSettings Implemented for MollierDiagramComponent

--- a/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
@@ -105,8 +105,8 @@
     <Compile Include="Component\SAMMollierCreateHeatingProcessByTemperatureDifference.cs" />
     <Compile Include="Component\SAMMollierCreateHeatRecoveryProcess.cs" />
     <Compile Include="Component\SAMMollierCreateSteamHumidificationProcessByHumidityRatioDifference.cs" />
-    <Compile Include="SAMMollierCreateSteamHumidificationProcessByRelativeHumidity.cs" />
-    <Compile Include="SAMMollierCreateUndefinedProcess.cs" />
+    <Compile Include="Component\SAMMollierCreateSteamHumidificationProcessByRelativeHumidity.cs" />
+    <Compile Include="Component\SAMMollierCreateUndefinedProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Mollier\SAM.Core.Mollier.UI\SAM.Core.Mollier.UI.csproj">
