--- a/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
@@ -111,6 +111,7 @@
   <ItemGroup>
     <PackageReference Include="Grasshopper">
       <Version>6.32.20340.21001</Version>
+      <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
