--- a/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
+++ b/Grasshopper/SAM.Core.Mollier.UI.Grasshopper/SAM.Core.Mollier.UI.Grasshopper.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Component\SAMMollierCreateMixingProcess.cs" />
     <Compile Include="Component\SAMMollierCreateMollierPoint.cs" />
     <Compile Include="Component\SAMMollierCreateRoomProcess.cs" />
+    <Compile Include="Component\SAMMollierCreateUndefinedProcessByEpsilon.cs" />
     <Compile Include="Component\SAMMollierGeometry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
