--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Interface\IVisibilitySetting.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Contains.cs" />
     <Compile Include="Query\ToolTipText.cs" />
     <Compile Include="Query\Value.cs" />
     <Compile Include="Query\DefaultMollierControlSettings.cs" />
