--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -172,6 +172,9 @@
     <Compile Include="Controls\UIMollierAppearanceControl.Designer.cs">
       <DependentUpon>UIMollierAppearanceControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Convert\ToChart\DataPoint.cs" />
+    <Compile Include="Convert\ToSAM\Point2D.cs" />
+    <Compile Include="Convert\ToChart\Series.cs" />
     <Compile Include="Create\Controls.cs" />
     <Compile Include="Delegates\MollierPointSelectedEventHandler.cs" />
     <Compile Include="Delegates\SelectMollierPointEventHandler.cs" />
@@ -224,8 +227,11 @@
     <Compile Include="Interface\IMollierProcessControl.cs" />
     <Compile Include="Interface\IUserVisibilitySetting.cs" />
     <Compile Include="Interface\IVisibilitySetting.cs" />
+    <Compile Include="Modify\AddLabel.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Angle.cs" />
+    <Compile Include="Query\ConstantValueCurves.cs" />
     <Compile Include="Query\MollierPoint.cs" />
     <Compile Include="Query\Contains.cs" />
     <Compile Include="Query\ToolTipText.cs" />
