--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -227,10 +227,20 @@
     <Compile Include="Interface\IMollierProcessControl.cs" />
     <Compile Include="Interface\IUserVisibilitySetting.cs" />
     <Compile Include="Interface\IVisibilitySetting.cs" />
+    <Compile Include="Modify\AddLinesSeries.cs" />
+    <Compile Include="Modify\AddMollierProcesses.cs" />
+    <Compile Include="Modify\AddMollierProcessesWIP.cs" />
+    <Compile Include="Modify\AddDivisionArea.cs" />
+    <Compile Include="Modify\AddMollierZones.cs" />
     <Compile Include="Modify\AddMollierPoints.cs" />
     <Compile Include="Modify\AddLabel.cs" />
+    <Compile Include="Modify\CreateMovedLabel.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\FindPoints.cs" />
+    <Compile Include="Query\Rectangle.cs" />
+    <Compile Include="Query\Intersect.cs" />
+    <Compile Include="Query\Overlaps.cs" />
     <Compile Include="Query\Angle.cs" />
     <Compile Include="Query\ConstantValueCurves.cs" />
     <Compile Include="Query\MollierPoint.cs" />
