--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -228,8 +228,8 @@
     <Compile Include="Interface\IUserVisibilitySetting.cs" />
     <Compile Include="Interface\IVisibilitySetting.cs" />
     <Compile Include="Modify\AddLinesSeries.cs" />
+    <Compile Include="Modify\AddMollierProcesses_Legacy.cs" />
     <Compile Include="Modify\AddMollierProcesses.cs" />
-    <Compile Include="Modify\AddMollierProcessesWIP.cs" />
     <Compile Include="Modify\AddDivisionArea.cs" />
     <Compile Include="Modify\AddMollierZones.cs" />
     <Compile Include="Modify\AddMollierPoints.cs" />
