--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -236,6 +236,8 @@
     <Compile Include="Modify\AddLabel.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\HumidityRatioRange.cs" />
+    <Compile Include="Query\DryBulbTemperatureRange.cs" />
     <Compile Include="Query\FindPoints.cs" />
     <Compile Include="Query\Rectangle.cs" />
     <Compile Include="Query\Angle.cs" />
