--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Modify\AddLabel.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\MollierRange.cs" />
     <Compile Include="Query\HumidityRatioRange.cs" />
     <Compile Include="Query\DryBulbTemperatureRange.cs" />
     <Compile Include="Query\FindPoints.cs" />
