--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -173,6 +173,7 @@
       <DependentUpon>UIMollierAppearanceControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Convert\ToChart\DataPoint.cs" />
+    <Compile Include="Convert\ToMollier\MollierPoint.cs" />
     <Compile Include="Convert\ToSAM\Point2D.cs" />
     <Compile Include="Convert\ToChart\Series.cs" />
     <Compile Include="Create\Controls.cs" />
@@ -235,6 +236,7 @@
     <Compile Include="Modify\AddLabel.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\DefaultPoint2D.cs" />
     <Compile Include="Query\MollierRange.cs" />
     <Compile Include="Query\HumidityRatioRange.cs" />
     <Compile Include="Query\DryBulbTemperatureRange.cs" />
@@ -267,6 +269,7 @@
     <Compile Include="Query\DefaultUnitType.cs" />
     <Compile Include="Query\UnitCategory.cs" />
     <Compile Include="Query\ZoomParameters.cs" />
+    <Compile Include="Temporary\Tests - Copy.cs" />
     <Compile Include="Temporary\Tests.cs" />
   </ItemGroup>
   <ItemGroup>
