--- a/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
+++ b/Mollier/SAM.Core.Mollier.UI/SAM.Core.Mollier.UI.csproj
@@ -79,7 +79,8 @@
     <Compile Include="Classes\MollierControlSettings.cs" />
     <Compile Include="Classes\MollierPointEventArgs.cs" />
     <Compile Include="Classes\PointGradientVisibilitySetting.cs" />
-    <Compile Include="Classes\MollierControlZone.cs" />
+    <Compile Include="Classes\ChartLabel.cs" />
+    <Compile Include="Classes\UIMollierZone.cs" />
     <Compile Include="Classes\VisibilitySetting.cs" />
     <Compile Include="Classes\VisibilitySettings.cs" />
     <Compile Include="Controls\AdiabaticHumidificationProcessControl.cs">
@@ -176,6 +177,7 @@
     <Compile Include="Convert\ToMollier\MollierPoint.cs" />
     <Compile Include="Convert\ToSAM\Point2D.cs" />
     <Compile Include="Convert\ToChart\Series.cs" />
+    <Compile Include="Create\Solver2DDatas.cs" />
     <Compile Include="Create\Controls.cs" />
     <Compile Include="Delegates\MollierPointSelectedEventHandler.cs" />
     <Compile Include="Delegates\SelectMollierPointEventHandler.cs" />
@@ -233,9 +235,11 @@
     <Compile Include="Modify\AddDivisionArea.cs" />
     <Compile Include="Modify\AddMollierZones.cs" />
     <Compile Include="Modify\AddMollierPoints.cs" />
-    <Compile Include="Modify\AddLabel.cs" />
+    <Compile Include="Modify\AddLabels.cs" />
     <Compile Include="Modify\SetParameterValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Obstacles.cs" />
+    <Compile Include="Query\AxesRatio.cs" />
     <Compile Include="Query\DefaultPoint2D.cs" />
     <Compile Include="Query\MollierRange.cs" />
     <Compile Include="Query\HumidityRatioRange.cs" />
@@ -269,7 +273,6 @@
     <Compile Include="Query\DefaultUnitType.cs" />
     <Compile Include="Query\UnitCategory.cs" />
     <Compile Include="Query\ZoomParameters.cs" />
-    <Compile Include="Temporary\Tests - Copy.cs" />
     <Compile Include="Temporary\Tests.cs" />
   </ItemGroup>
   <ItemGroup>
